--- a/sitecopy/trunk/po/POTFILES.in
+++ b/sitecopy/trunk/po/POTFILES.in
@@ -1,91 +1,67 @@
-expat/gennmtab/gennmtab.c
-expat/xmlparse/hashtable.c
-expat/xmlparse/xmlparse.c
-expat/xmltok/xmlrole.c
-expat/xmltok/xmltok.c
-expat/xmltok/xmltok_impl.c
-expat/xmltok/xmltok_ns.c
-gnome/changes.c
-gnome/file_widgets.c
-gnome/gcommon.c
-gnome/init.c
-gnome/main.c
-gnome/minilist.c
-gnome/misc.c
-gnome/new_site.c
-gnome/operations.c
-gnome/resynch.c
-gnome/site_widgets.c
-gnome/tree.c
-lib/basename.c
-lib/dirname.c
-lib/fnmatch.c
-lib/getopt.c
-lib/getopt1.c
-lib/linelen.c
-lib/netrc.c
-lib/rpmatch.c
-lib/strcasecmp.c
-lib/yesno.c
-src/common.c
-src/console_fe.c
-src/davdriver.c
-src/fileset.c
-src/ftp.c
-src/ftpdriver.c
-src/rcfile.c
-src/rshdriver.c
-src/sitefiles.c
-src/sites.c
-src/sitestore.c
-src/vfsdriver.c
-src/nulldriver.c
-src/lsparser.c
-libneon/ne_207.c
-libneon/ne_acl.c
-libneon/ne_alloc.c
-libneon/ne_auth.c
-libneon/ne_basic.c
-libneon/ne_compress.c
-libneon/ne_dates.c
-libneon/ne_request.c
-libneon/ne_i18n.c
-libneon/ne_locks.c
-libneon/ne_md5.c
-libneon/ne_session.c
-libneon/ne_props.c
-libneon/ne_redirect.c
-libneon/ne_socket.c
-libneon/ne_string.c
-libneon/ne_utils.c
-libneon/ne_xml.c
-libneon/ne_uri.c
-libneon/ne_openssl.c
-libneon/ne_stubssl.c
-intl/bindtextdom.c
-intl/dcgettext.c
-intl/dcigettext.c
-intl/dcngettext.c
-intl/dgettext.c
-intl/dngettext.c
-intl/explodename.c
-intl/finddomain.c
-intl/gettext.c
-intl/intl-compat.c
-intl/l10nflist.c
-intl/printf.c
-intl/loadmsgcat.c
-intl/localcharset.c
-intl/localealias.c
-intl/localename.c
-intl/ngettext.c
-intl/os2compat.c
-intl/osdep.c
-intl/plural-exp.c
-intl/plural.c
-intl/textdomain.c
-intl/log.c
-intl/relocatable.c
-intl/printf-args.c
-intl/printf-parse.c
-intl/vasnprintf.c
+./src/rcfile.c
+./src/ftpdriver.c
+./src/rshdriver.c
+./src/vfsdriver.c
+./src/console_fe.c
+./src/sitestore.c
+./src/nulldriver.c
+./src/davdriver.c
+./src/sitefiles.c
+./src/sites.c
+./src/common.c
+./src/ftp.c
+./src/lsparser.c
+./src/fileset.c
+./gnome/init.c
+./gnome/changes.c
+./gnome/operations.c
+./gnome/site_widgets.c
+./gnome/gcommon.c
+./gnome/tree.c
+./gnome/file_widgets.c
+./gnome/resynch.c
+./gnome/new_site.c
+./gnome/main.c
+./gnome/minilist.c
+./gnome/misc.c
+./lib/neon/ne_redirect.c
+./lib/neon/ne_gnutls.c
+./lib/neon/ne_i18n.c
+./lib/neon/ne_openssl.c
+./lib/neon/ne_session.c
+./lib/neon/ne_socket.c
+./lib/neon/ne_request.c
+./lib/neon/ne_alloc.c
+./lib/neon/ne_stubssl.c
+./lib/neon/ne_utils.c
+./lib/neon/ne_xml.c
+./lib/neon/ne_props.c
+./lib/neon/ne_string.c
+./lib/neon/ne_compress.c
+./lib/neon/ne_xmlreq.c
+./lib/neon/ne_basic.c
+./lib/neon/ne_md5.c
+./lib/neon/ne_cookies.c
+./lib/neon/ne_uri.c
+./lib/neon/ne_acl.c
+./lib/neon/ne_dates.c
+./lib/neon/ne_auth.c
+./lib/neon/ne_207.c
+./lib/neon/ne_locks.c
+./lib/rpmatch.c
+./lib/dirname.c
+./lib/fnmatch.c
+./lib/getopt.c
+./lib/getopt1.c
+./lib/strcasecmp.c
+./lib/linelen.c
+./lib/basename.c
+./lib/netrc.c
+./lib/yesno.c
+./lib/expat/xmlparse/xmlparse.c
+./lib/expat/xmlparse/hashtable.c
+./lib/expat/gennmtab/gennmtab.c
+./lib/expat/xmltok/xmltok_ns.c
+./lib/expat/xmltok/xmltok.c
+./lib/expat/xmltok/xmltok_impl.c
+./lib/expat/xmltok/xmlrole.c
