Add new sftp driver from Nobuyuki Tsuchimura:
* configure.in: Add --enable-sftp; enable by default if socketpair()
or pipe() is available.

* src/rcfile.c (rcfile_read): Allow "protocol sftp".
(rcfile_verify): Enable sftp driver.

* src/console_fe.c (usage, version): Advertise sftp support.

* src/common.c: Add sftp debug channel.

* src/sftpdriver.c: New file.

* src/sites.h: Define new siteproto_sftp.

--- a/configure.in
+++ b/configure.in
@@ -87,6 +87,18 @@ if test "$enable_rsh" = "yes"; then
     AC_DEFINE(USE_RSH, 1, [Define to compile the rsh/rcp protocol driver])
 fi
 
+AC_ARG_ENABLE(sftp,
+ AC_HELP_STRING([--disable-sftp], [disable sftp/ssh support]),,
+ [enable_sftp=no
+  AC_CHECK_FUNCS([socketpair pipe], [enable_sftp=yes; break])
+ ])
+
+if test "$enable_sftp" = "yes"; then
+    EXTRAOBJS="$EXTRAOBJS src/sftpdriver.o"
+    proto_msg="sftp/ssh ${proto_msg}"
+    AC_DEFINE([USE_SFTP], 1, [Define to compile the sftp/ssh protocol driver])
+fi
+
 dnl Strip the binary in debug mode.
 NEON_DEBUG(,[LDFLAGS="-s $LDFLAGS"])
 
