--- a/sitecopy/trunk/po/POTFILES.in
+++ b/sitecopy/trunk/po/POTFILES.in
@@ -12,6 +12,7 @@
 ./src/ftp.c
 ./src/lsparser.c
 ./src/fileset.c
+./src/sftpdriver.c
 ./gnome/init.c
 ./gnome/changes.c
 ./gnome/operations.c
@@ -41,6 +42,7 @@
 ./lib/neon/ne_xmlreq.c
 ./lib/neon/ne_basic.c
 ./lib/neon/ne_md5.c
+./lib/neon/ne_sspi.c
 ./lib/neon/ne_uri.c
 ./lib/neon/ne_acl.c
 ./lib/neon/ne_dates.c
