--- a/Makefile.in
+++ b/Makefile.in
@@ -14,6 +14,7 @@ man1dir = $(mandir)/man1
 docdir = $(prefix)/doc/sitecopy
 localedir = $(datadir)/locale
 datadir = @datadir@
+datarootdir = @datarootdir@
 pkgdatadir = $(datadir)/sitecopy
 
 # Build paths.
