--- a/configure.in
+++ b/configure.in
@@ -48,8 +48,6 @@ AC_ARG_ENABLE(webdav,
 AC_ARG_ENABLE(rsh,
  AC_HELP_STRING([--disable-rsh], [disable rsh/rcp support]),,
  [enable_rsh=yes])
-AC_ARG_ENABLE(gnomefe,
- AC_HELP_STRING([--enable-gnomefe], [enable GNOME front end]))
 
 dnl Check for programs
 
@@ -143,11 +141,6 @@ AC_CHECK_HEADERS(stdarg.h string.h strings.h sys/time.h regex.h \
 
 SOCKLEN_ARG_TYPE
 
-if test "$enable_gnomefe" = "yes"; then
-    AC_CHECK_LIB(pthread, pthread_create, gnome_is_ok=yes, gnome_is_ok=no)
-    AM_PATH_LIBGLADE([],[],[gnome])
-fi
-
 ALL_LINGUAS="ru fr cs ja de tr nn it"
 AM_GNU_GETTEXT([no-libtool])
 
@@ -168,33 +161,18 @@ dnl --------------------------------
 dnl FE configuration
 dnl --------------------------------
 
-if test "$enable_gnomefe" = "yes"; then
-    if test "$gnome_is_ok" = "yes"; then
-        EXTRAOBJS="$EXTRAOBJS \$(GNOMEOBJS)"
-	LIBS="$LIBS $GNOME_LIBS $GTK_LIBS $GNOME_LIBDIR $GNOMEUI_LIBS $LIBGLADE_LIBS"
-	CPPFLAGS="$CPPFLAGS $GNOME_INCLUDEDIR $LIBGLADE_CFLAGS"
-	GNOME_SC_HELPDIR="`gnome-config --datadir`/gnome/help/xsitecopy"
-	SHORTCUT_LOCATION="`gnome-config --datadir`/gnome/apps/Internet"
-	TARGET="xsitecopy"
-	fe_msg="GNOME"
-    else
-        AC_MSG_ERROR([could not find the required GNOME libraries])
-    fi
-else
-    # Console front end
-    EXTRAOBJS="$EXTRAOBJS src/console_fe.o"
-    AC_LIBOBJ(lib/rpmatch)
-    AC_LIBOBJ(lib/yesno)
-    fe_msg="Console"
-    TARGET="sitecopy"
-fi
+# Console front end
+EXTRAOBJS="$EXTRAOBJS src/console_fe.o"
+AC_LIBOBJ(lib/rpmatch)
+AC_LIBOBJ(lib/yesno)
+fe_msg="Console"
+TARGET="sitecopy"
 
 # This goes in CPPFLAGS so libneon/Makefile can pick up config.h
 CPPFLAGS="$CPPFLAGS -I\$(top_builddir)"
 
 dnl Makefile substitutions
 
-AC_SUBST(GNOME_SC_HELPDIR)
 AC_SUBST(XSC_HELP)
 AC_SUBST(SHORTCUT_LOCATION)
 AC_SUBST(EXTRAOBJS)
@@ -217,12 +195,8 @@ AC_MSG_NOTICE([Configured sitecopy $PACKAGE_VERSION:
 ])
 
 
-if test "$enable_gnomefe" = "yes"; then
-   AC_MSG_NOTICE([The GNOME frontend is currently unmaintained.])
-fi
-
 # Create all the necessary directories for VPATH builds.
-for i in gnome src intl lib/expat lib/expat/xmltok lib/expat/gennmtab \
+for i in src intl lib/expat lib/expat/xmltok lib/expat/gennmtab \
          lib/expat/xmlparse; do
   test -d $i || mkdir $i
 done
