--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         os: [ubuntu-18.04, ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
-    - run: sudo apt-get update && sudo apt-get -y install libneon27-dev
+    - run: sudo apt-get update && sudo apt-get -y install libneon27-dev gettext
     - run: ./autogen.sh
     - run: ./configure
     - run: make
