--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 /po/Makefile.in
 /po/POTFILES
 /.version
+/m4/lt~obsolete.m4
+/m4/ltoptions.m4
+/m4/ltsugar.m4
+/m4/ltversion.m4
+/m4/libtool.m4
+/ltmain.sh
