* tests/conftest.py, tests/test_basic.py: Minimal test cases.
* Makefile.in (check): New target.

CI: run make check

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         submodules: true
     - run: sudo apt-get update
-    - run: sudo apt-get -y install gettext ${{ !matrix.bundled && 'libneon27-dev' || '' }}
+    - run: sudo apt-get -y install gettext python3-pytest ${{ !matrix.bundled && 'libneon27-dev' || '' }}
     - run: bash -ex ./.release.sh master
     - run: ./autogen.sh
     - run: ./configure --prefix=/tmp/rootdir 
@@ -27,3 +27,4 @@ jobs:
                 ${{ matrix.warnings && 'EXTRA_CFLAGS=-Werror' || '' }}
     - run: make install
       if: ${{ matrix.install }}
+    - run: make check
